@@ -1,6 +1,8 @@
 package store.aurora.book.service.tag.impl;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import store.aurora.book.dto.tag.TagRequestDto;
@@ -20,9 +22,6 @@ public class TagServiceImpl implements TagService {
     private final TagRepository tagRepository;
     private final BookTagRepository bookTagRepository;
 
-    /**
-     * 태그 생성
-     */
     @Transactional
     @Override
     public TagResponseDto createTag(TagRequestDto requestDto) {
@@ -36,19 +35,29 @@ public class TagServiceImpl implements TagService {
         return mapToResponseDto(tag);
     }
 
-    /**
-     * 모든 태그 조회
-     */
+    @Transactional(readOnly = true)
     @Override
-    public List<TagResponseDto> getAllTags() {
-        return tagRepository.findAll().stream()
-                .map(this::mapToResponseDto)
-                .toList();
+    public List<TagResponseDto> searchTags(String keyword) {
+        return tagRepository.findByKeyword(keyword)
+                .stream()
+                .map(tag -> new TagResponseDto(tag.getId(), tag.getName()))
+                .collect(Collectors.toList());
     }
 
-    /**
-     * ID로 태그 조회
-     */
+    @Override
+    public List<TagResponseDto> getAllTags() {
+        return tagRepository.findAll()
+                .stream()
+                .map(this::mapToResponseDto)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public Page<TagResponseDto> getAllTags(Pageable pageable) {
+        return tagRepository.findAll(pageable)
+                .map(this::mapToResponseDto);
+    }
+
     @Override
     public TagResponseDto getTagById(Long id) {
         Tag tag = tagRepository.findById(id)
@@ -56,9 +65,6 @@ public class TagServiceImpl implements TagService {
         return mapToResponseDto(tag);
     }
 
-    /**
-     * 태그 수정
-     */
     @Transactional
     @Override
     public TagResponseDto updateTag(Long id, TagRequestDto requestDto) {
@@ -69,9 +75,6 @@ public class TagServiceImpl implements TagService {
         return mapToResponseDto(tag);
     }
 
-    /**
-     * 태그 삭제
-     */
     @Transactional
     @Override
     public void deleteTag(Long id) {
@@ -80,11 +83,22 @@ public class TagServiceImpl implements TagService {
         }
         tagRepository.deleteById(id);
     }
+    @Transactional
+    @Override
+    public List<Tag> getOrCreateTagsByName(List<String> tagNames) {
+        if (tagNames == null || tagNames.isEmpty()) {
+            return List.of();
+        }
+
+        return tagNames.stream()
+                .map(tagName -> tagRepository.findByName(tagName)
+                        .orElseGet(() -> tagRepository.save(new Tag(tagName))))
+                .collect(Collectors.toList());
+    }
 
     @Transactional
     @Override
-    public List<BookTag> createBookTags(List<Long> tagIds) {
-        List<Tag> tags = tagRepository.findAllById(tagIds);
+    public List<BookTag> createBookTags(List<Tag> tags) {
         return tags.stream()
                 .map(tag -> {
                     BookTag bookTag = new BookTag();
